force-app/main/default/objects/Member__c/Member__c.object-meta.xml
<CustomObject>
    <description>Created by MS, Business Unit: Cowork, Purpose report on members&apos; locations</description>
    <label>Member</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>