force-app/main/default/objects/Member__c/fields/Daily_Free_Hours__c.field-meta.xml
<CustomField>
    <fullName>Daily_Free_Hours__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Created by: CMP 
Business Unit: Cowork</description>
    <label>Daily Free Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>