force-app/main/default/objects/Member__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <description>Created By: CC
Department: Cowork
Purpose: to signify a members market.</description>
    <label>Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BW_Market</valueSetName>
    </valueSet>
</CustomField>